# teletorrent

./: .ghci  .gitignore  Makefile  README.md  cabal.project  stack.yaml  teletorrent.cabal
.github/workflows/: ci.yml
cli/: Main.hs
src/: Teletorrent.hs
src/Teletorrent/: Config.hs
src/Teletorrent/Effects/: LocalFilesystem.hs  RemoteBox.hs
