cabal-version: 2.4

name:           teletorrent
version:        0.1.0
synopsis:       Nothing to see here, please move along
description:    Please see README.md
category:       Tools
homepage:       https://github.com/ethercrow/teletorrent#readme
bug-reports:    https://github.com/ethercrow/teletorrent/issues
maintainer:     Dmitry Ivanov <ethercrow@gmail.com>
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/teletorrent

common options
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeInType
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors
    -O2

  default-language: Haskell2010

common deps
  build-depends:
      base >=4.12 && <5
    , bytestring
    , dhall
    , filepath
    , monad-loops
    , polysemy
    , polysemy-plugin
    , text
    , torrent
    , typed-process
    , xdg-basedir

library
  import: options, deps
  exposed-modules:
      Teletorrent
  other-modules:
      Paths_teletorrent
      Teletorrent.Config
      Teletorrent.Effects.LocalFilesystem
      Teletorrent.Effects.RemoteBox
  hs-source-dirs:
      src

executable teletorrent
  import: options, deps
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -eventlog
  other-modules:
      Paths_teletorrent
  hs-source-dirs:
      cli
  build-depends:
    , teletorrent
    , dhall
